Everything for the picture scroll is working a lot better now.  Now I have a problem word wrapping.  If the width is too small for the text, the extra text on the bottom bar is wrapped to below where the bar is.  I'm setting the line-height of the <p> element to the height of the bar.  I need to check if that is the correct way to do it.  It was how I got the text to be vertically centered, but maybe it's not doing what I think it does.
The pdf is a css cheatsheet that is searchable.  Seems like a good thing
to have accessable.

--- a/prototyping/pictureScroll/resources/css/pictureScroll2.css
+++ b/prototyping/pictureScroll/resources/css/pictureScroll2.css
@@ -9,7 +9,21 @@ html {
 }
 
 body {
+	margin: 0;
 	background-color: black;
+}
+
+p {
+	margin: 0;
+	text-align: center;
+	vertical-align: middle;
+	width: inherit;
+	/*word-wrap: normal;*/
+	color: white;
+	font-size: 20px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
 }
 
 .picture-scroll {
@@ -18,26 +32,22 @@ body {
 
 .bar-top {
 	background-color: var(--bar-color);
+	margin: 0 auto;
+	/*position: absolute;*/
+}
+
+.bar-top-text {
 }
 
 .picture-window {
-	margin: 0;
-}
-
-.picture {
-	align-items: center;
+	position: relative;
+	margin: auto;
 }
 
 .bar-bottom {
 	background-color: var(--bar-color);
 	position: absolute;
-	top: 426px;
 }
 
-.space-below {
-
-}
-
-footer {
-	height: 10px;
+.bar-bottom-text {
 }
